fix: timeline separator on mobiles fix: body background color

--- a/web-foundations/18.03/src/components/_componenets-theme.scss
+++ b/web-foundations/18.03/src/components/_componenets-theme.scss
@@ -1,4 +1,5 @@
 // import the theming functionality.
+@import "componenets-base-theme";
 @import "typography.theme";
 @import "navbar/navbar.theme";
 @import "portfolio/portfolio.theme";
@@ -9,6 +10,9 @@
 
 // create a theme.
 @mixin components-theme($theme) {
+
+  // any media
+  @include components-theme-base($theme);
   @include typography-theme($theme);
   @include sidebar-theme($theme);
   @include portfolio-theme($theme);
@@ -16,4 +20,9 @@
   @include tech-tags-theme($theme);
   @include project-gallery-theme($theme);
   @include project-gallery-lightbox-theme($theme);
+
+  // mobile only
+  @media screen and (max-width: 599px) {
+    @include portfolio-theme-mobile-only($theme);
+  }
 }
